--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
     <modules>
         <module>microservicecloud-api</module>
         <module>microservicecloud-provider-dept-8001</module>
+        <module>microservicecloud-provider-dept-8003</module>
+        <module>microservisecloud-zuul-gateway-9527</module>
+        <module>microservicecloud-consumer-dept-80</module>
+        <module>microservicecloud-consumer-hystrix-dashboard-9001</module>
+        <module>microservicecloud-eureka-7001</module>
+        <module>microservicecloud-eureka-7002</module>
+        <module>microservicecloud-eureka-7003</module>
     </modules>
     <packaging>pom</packaging>
 
